fix password dots "jumping" when filled

--- a/frontend/src/pages/ComingSoonPage/ComingSoonPage.scss
+++ b/frontend/src/pages/ComingSoonPage/ComingSoonPage.scss
@@ -74,10 +74,6 @@
 
     .input-container {
       margin: 0 auto 1.5em;
-
-      input {
-        width: 100%;
-      }
     }
   }
 
